--- a/CEO/CMS.css
+++ b/CEO/CMS.css
@@ -283,7 +283,7 @@ body {
   height: 100vh;
   width: 100%;
   padding: 90px 0;
-  background: rgb(223, 221, 221);
+  background: #fff;
 }
 .pic {
   height: 70vh;
@@ -345,7 +345,7 @@ span {
   justify-content: flex-end;
   align-items: flex-end;
   min-height: 40vh;
-  background: #fff7f7;
+  background: #fff;
 }
 
 footer {
